--- a/data extraction and other models.ipynb
+++ b/data extraction and other models.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -244,6 +244,93 @@
     "clf.fit(X_train,y_train)\n",
     "clf.score(X_test,y_test)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a=pd.read_csv('trimmedData.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "         Unnamed: 0         X  Y\n",
+      "0                 0 -35768.88  0\n",
+      "1                 1 -35776.61  0\n",
+      "2                 2 -35743.90  0\n",
+      "3                 3 -35672.68  0\n",
+      "4                 4 -35584.84  0\n",
+      "5                 5 -35521.47  0\n",
+      "6                 6 -35530.38  0\n",
+      "7                 7 -35639.73  0\n",
+      "8                 8 -35833.74  0\n",
+      "9                 9 -36052.32  0\n",
+      "10               10 -36216.17  0\n",
+      "11               11 -36269.10  0\n",
+      "12               12 -36211.43  0\n",
+      "13               13 -36094.01  0\n",
+      "14               14 -35985.30  0\n",
+      "15               15 -35940.94  0\n",
+      "16               16 -35975.62  0\n",
+      "17               17 -36058.86  0\n",
+      "18               18 -36121.15  0\n",
+      "19               19 -36087.05  0\n",
+      "20               20 -35920.49  0\n",
+      "21               21 -35655.69  0\n",
+      "22               22 -35390.91  0\n",
+      "23               23 -35243.60  0\n",
+      "24               24 -35287.48  0\n",
+      "25               25 -35520.36  0\n",
+      "26               26 -35865.79  0\n",
+      "27               27 -36201.35  0\n",
+      "28               28 -36406.73  0\n",
+      "29               29 -36402.24  0\n",
+      "...             ...       ... ..\n",
+      "1831056     1831056 -24458.07  0\n",
+      "1831057     1831057 -24347.21  0\n",
+      "1831058     1831058 -24234.71  0\n",
+      "1831059     1831059 -24129.62  0\n",
+      "1831060     1831060 -24030.32  0\n",
+      "1831061     1831061 -23938.61  0\n",
+      "1831062     1831062 -23868.55  0\n",
+      "1831063     1831063 -23838.38  0\n",
+      "1831064     1831064 -23854.50  0\n",
+      "1831065     1831065 -23904.08  0\n",
+      "1831066     1831066 -23969.71  0\n",
+      "1831067     1831067 -24041.91  0\n",
+      "1831068     1831068 -24119.90  0\n",
+      "1831069     1831069 -24198.66  0\n",
+      "1831070     1831070 -24267.81  0\n",
+      "1831071     1831071 -24318.50  0\n",
+      "1831072     1831072 -24350.69  0\n",
+      "1831073     1831073 -24363.03  0\n",
+      "1831074     1831074 -24347.07  0\n",
+      "1831075     1831075 -24286.16  0\n",
+      "1831076     1831076 -24176.68  0\n",
+      "1831077     1831077 -24036.65  0\n",
+      "1831078     1831078 -23898.02  0\n",
+      "1831079     1831079 -23785.02  0\n",
+      "1831080     1831080 -23703.50  0\n",
+      "1831081     1831081 -23645.44  0\n",
+      "1831082     1831082 -23603.68  0\n",
+      "1831083     1831083 -23567.85  0\n",
+      "1831084     1831084 -23524.69  0\n",
+      "1831085     1831085 -23461.63  0\n",
+      "\n",
+      "[1831086 rows x 3 columns]\n"
+     ]
+    }
+   ],
+   "source": []
   },
   {
    "cell_type": "code",
