--- a/4-5-2019_complete_data_visuals.ipynb
+++ b/4-5-2019_complete_data_visuals.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# this file is for visualizing data of all files"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
@@ -56,6 +63,21 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Value, tag and colour\n",
+    "0   unlabled    Black          \n",
+    "32  peak        red         \n",
+    "37  som med     blue        \n",
+    "38  good med    yellow          \n",
+    "39  mind wonder green                    \n",
+    "40  sleepy      white         \n",
+    "\n",
+    "Mind Wonder and aleepy are 5-10 sec after it actually occoured\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 56,
    "metadata": {
@@ -64,6 +86,13 @@
    "outputs": [],
    "source": [
     "mapping= {0: (\"black\", \".\"), 37: (\"blue\", \".\"),39: (\"green\", \".\"), 40: (\"white\", \".\"),38: (\"yellow\", \".\"), 32: (\"red\", \".\")}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Fp2\n"
    ]
   },
   {
@@ -113,6 +142,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# F4"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 57,
    "metadata": {},
@@ -144,6 +180,13 @@
    "source": [
     "s3.X=s3.X.astype(float)\n",
     "s3=s3.reset_index().values"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# o2"
    ]
   },
   {
@@ -181,6 +224,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# P4"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 59,
    "metadata": {},
@@ -206,19 +256,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<Figure size 432x288 with 0 Axes>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": []
   },
   {
@@ -245,7 +285,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
