--- a/deleting_unlabled_data.ipynb
+++ b/deleting_unlabled_data.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# This File is for saving Labled Data to Trimmed Data .csv To be used ahead"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -144,6 +151,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "temp=s3\n",
+    "#rows=temp.shape[0]\n",
+    "temp=temp[temp['Y']!=0]\n",
+    "temp=temp[temp['Y']!=39]\n",
+    "temp=temp[temp['Y']!=40]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "temp.to_csv('trimmedData.csv',sep=',')"
    ]
   }
@@ -164,7 +184,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
