--- a/data extraction and other models using amplitude.ipynb
+++ b/data extraction and other models using amplitude.ipynb
@@ -32,11 +32,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 44,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Below Code have been Optimised in creating chunks of deleting_unlabled_data file"
+   ]
   },
   {
    "cell_type": "code",
