--- a/creating chunks of data and basic algos.ipynb
+++ b/creating chunks of data and basic algos.ipynb
@@ -35,7 +35,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# grouping of data"
+    "# grouping of data \n",
+    "and creating chunks of size window\n"
    ]
   },
   {
@@ -54,7 +55,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "g1=gtemp.get_group(1)\n",
+    "g1=gtemp.get_group(1) \n",
     "g2=gtemp.get_group(2)\n",
     "g32=gtemp.get_group(32)\n",
     "g37=gtemp.get_group(37)\n",
@@ -70,6 +71,7 @@
     "n_features=1\n",
     "totaldp=0\n",
     "window=100\n",
+    "\n",
     "X=g1['X']\n",
     "data_points=X.shape[0]//window\n",
     "y=np.append(y,[1]*data_points)\n",
@@ -114,6 +116,74 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[[-37016.43],\n",
+       "        [-37019.97],\n",
+       "        [-36953.35],\n",
+       "        ...,\n",
+       "        [-36652.03],\n",
+       "        [-36534.31],\n",
+       "        [-36396.34]],\n",
+       "\n",
+       "       [[-36287.14],\n",
+       "        [-36243.68],\n",
+       "        [-36275.21],\n",
+       "        ...,\n",
+       "        [-37503.79],\n",
+       "        [-37310.43],\n",
+       "        [-36971.02]],\n",
+       "\n",
+       "       [[-36571.61],\n",
+       "        [-36217.95],\n",
+       "        [-35993.68],\n",
+       "        ...,\n",
+       "        [-36447.84],\n",
+       "        [-36526.63],\n",
+       "        [-36607.72]],\n",
+       "\n",
+       "       ...,\n",
+       "\n",
+       "       [[-36154.45],\n",
+       "        [-35843.25],\n",
+       "        [-35574.54],\n",
+       "        ...,\n",
+       "        [-35931.14],\n",
+       "        [-35707.47],\n",
+       "        [-35552.08]],\n",
+       "\n",
+       "       [[-35522.41],\n",
+       "        [-35618.35],\n",
+       "        [-35781.13],\n",
+       "        ...,\n",
+       "        [-35297.22],\n",
+       "        [-35059.32],\n",
+       "        [-35028.91]],\n",
+       "\n",
+       "       [[-35192.5 ],\n",
+       "        [-35463.76],\n",
+       "        [-35733.85],\n",
+       "        ...,\n",
+       "        [-36265.45],\n",
+       "        [-36272.82],\n",
+       "        [-36109.07]]])"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "groupedX"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -122,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,7 +203,8 @@
     "a=np.concatenate((a,np.min(X,axis=1)),axis=1)\n",
     "a=np.concatenate((a,np.average(X,axis=1)),axis=1)\n",
     "a=np.concatenate((a,np.std(X,axis=1)),axis=1)\n",
-    "a=np.real(np.fft.rfftn(X,axes=(0,1)))[:,0]"
+    "a=np.concatenate((a,np.real(np.fft.rfftn(X,axes=(0,1)))[:,0]),axis=1)\n",
+    "X=a"
    ]
   },
   {
@@ -145,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -157,7 +228,7 @@
     }
    ],
    "source": [
-    "X=X.reshape(-1,window)\n",
+    "#X=X.reshape(-1,window)\n",
     "\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.33)\n",
     "print(y_test.shape)"
@@ -167,29 +238,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Value, tag           \n",
-    "32  peak                \n",
-    "37  som med           \n",
-    "38  good med            \n",
-    "1  mind wonder                    \n",
-    "2  sleepy             \n",
+    "# Data Classes\n",
+    "1 new mind wonder           \n",
+    "2 new sleepy        \n",
+    "32 peek experiences        \n",
+    "37 some meditation     \n",
+    "38 good meditation      \n",
     "\n",
-    "Mind Wonder and aleepy are 5-10 sec after it actually occoured\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# SVM"
+    "Mind Wonder and aleepy are 5-10 sec after it actually occoured"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "#SVM\n",
     "from sklearn.svm import SVC\n",
     "clf = SVC(kernel='linear') \n",
     "clf.fit(X_train,y_train)\n",
@@ -199,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -210,35 +275,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Confusion Matrix :\n",
-      "[[807   7   0 218   9]\n",
-      " [229   4   0   0   0]\n",
-      " [  3   0   0   2   0]\n",
-      " [320   3   3 282  19]\n",
-      " [ 82   0   7 161  14]]\n",
-      "Accuracy Score : 0.5101382488479262\n",
-      "              precision    recall  f1-score   support\n",
-      "\n",
-      "         1.0       0.56      0.78      0.65      1041\n",
-      "         2.0       0.29      0.02      0.03       233\n",
-      "        32.0       0.00      0.00      0.00         5\n",
-      "        37.0       0.43      0.45      0.44       627\n",
-      "        38.0       0.33      0.05      0.09       264\n",
-      "\n",
-      "   micro avg       0.51      0.51      0.51      2170\n",
-      "   macro avg       0.32      0.26      0.24      2170\n",
-      "weighted avg       0.46      0.51      0.45      2170\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "actual=y_test\n",
     "predicted=y_pre\n",
@@ -251,18 +290,12 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Decision Tree"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Decision Tree\n",
     "from sklearn.tree import DecisionTreeClassifier\n",
     "clf = DecisionTreeClassifier().fit(X_train, y_train)\n",
     "clf.score(X_test,y_test)\n",
@@ -271,32 +304,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Confusion Matrix :\n",
-      "[[848  85   0  90   2]\n",
-      " [ 75 110   0  24   0]\n",
-      " [  0   0   1   1   9]\n",
-      " [161  27   0 405  73]\n",
-      " [ 21   0   4  67 167]]\n",
-      "Accuracy Score : 0.7055299539170506\n",
-      "              precision    recall  f1-score   support\n",
-      "\n",
-      "         1.0       0.77      0.83      0.80      1025\n",
-      "         2.0       0.50      0.53      0.51       209\n",
-      "        32.0       0.20      0.09      0.13        11\n",
-      "        37.0       0.69      0.61      0.65       666\n",
-      "        38.0       0.67      0.64      0.65       259\n",
-      "\n",
-      "   micro avg       0.71      0.71      0.71      2170\n",
-      "   macro avg       0.56      0.54      0.55      2170\n",
-      "weighted avg       0.70      0.71      0.70      2170\n",
-      "\n"
+     "ename": "NameError",
+     "evalue": "name 'confusion_matrix' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-11-2b96cbac70c4>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[0mactual\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0my_test\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[0mpredicted\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0my_pre\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 3\u001b[1;33m \u001b[0mresults\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mconfusion_matrix\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mactual\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mpredicted\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      4\u001b[0m \u001b[0mprint\u001b[0m \u001b[1;33m(\u001b[0m\u001b[1;34m'Confusion Matrix :'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mresults\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'confusion_matrix' is not defined"
      ]
     }
    ],
@@ -312,18 +331,12 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Random Forest"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Random Forest\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
     "clf=RandomForestClassifier(n_estimators=100)\n",
     "clf.fit(X_train,y_train)\n",
@@ -333,43 +346,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Confusion Matrix :\n",
-      "[[952  33   0  65   0]\n",
-      " [113 108   0   0   0]\n",
-      " [  0   0   0   0   6]\n",
-      " [ 71  18   0 503  41]\n",
-      " [  5   0   0  37 218]]\n",
-      "Accuracy Score : 0.8207373271889401\n",
-      "              precision    recall  f1-score   support\n",
-      "\n",
-      "         1.0       0.83      0.91      0.87      1050\n",
-      "         2.0       0.68      0.49      0.57       221\n",
-      "        32.0       0.00      0.00      0.00         6\n",
-      "        37.0       0.83      0.79      0.81       633\n",
-      "        38.0       0.82      0.84      0.83       260\n",
-      "\n",
-      "   micro avg       0.82      0.82      0.82      2170\n",
-      "   macro avg       0.63      0.61      0.62      2170\n",
-      "weighted avg       0.81      0.82      0.81      2170\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\Turiya\\Anaconda3\\lib\\site-packages\\sklearn\\metrics\\classification.py:1143: UndefinedMetricWarning: Precision and F-score are ill-defined and being set to 0.0 in labels with no predicted samples.\n",
-      "  'precision', 'predicted', average, warn_for)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "actual=y_test\n",
     "predicted=y_pred\n",
@@ -378,34 +357,16 @@
     "print(results) \n",
     "print ('Accuracy Score :',accuracy_score(actual, predicted) )\n",
     "#print ('Report : ')\n",
-    "print (classification_report(actual, predicted) )"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# KNN"
+    "print (classification_report(actual, predicted))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'X_train' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-1-6971d83a7dd0>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[0msklearn\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mneighbors\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mKNeighborsClassifier\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[0mknn\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mKNeighborsClassifier\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mn_neighbors\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m5\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 3\u001b[1;33m \u001b[0mknn\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfit\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mX_train\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0my_train\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      4\u001b[0m \u001b[0mknn\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mscore\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mX_test\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0my_test\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[0my_pred\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mknn\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpredict\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mX_test\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'X_train' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
+    "#KNN\n",
     "from sklearn.neighbors import KNeighborsClassifier\n",
     "knn=KNeighborsClassifier(n_neighbors=5)\n",
     "knn.fit(X_train,y_train)\n",
@@ -428,6 +389,13 @@
     "#print ('Report : ')\n",
     "print (classification_report(actual, predicted) )"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
