--- a/creating chunks of data and basic algos.ipynb
+++ b/creating chunks of data and basic algos.ipynb
@@ -119,68 +119,12 @@
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[[-37016.43],\n",
-       "        [-37019.97],\n",
-       "        [-36953.35],\n",
-       "        ...,\n",
-       "        [-36652.03],\n",
-       "        [-36534.31],\n",
-       "        [-36396.34]],\n",
-       "\n",
-       "       [[-36287.14],\n",
-       "        [-36243.68],\n",
-       "        [-36275.21],\n",
-       "        ...,\n",
-       "        [-37503.79],\n",
-       "        [-37310.43],\n",
-       "        [-36971.02]],\n",
-       "\n",
-       "       [[-36571.61],\n",
-       "        [-36217.95],\n",
-       "        [-35993.68],\n",
-       "        ...,\n",
-       "        [-36447.84],\n",
-       "        [-36526.63],\n",
-       "        [-36607.72]],\n",
-       "\n",
-       "       ...,\n",
-       "\n",
-       "       [[-36154.45],\n",
-       "        [-35843.25],\n",
-       "        [-35574.54],\n",
-       "        ...,\n",
-       "        [-35931.14],\n",
-       "        [-35707.47],\n",
-       "        [-35552.08]],\n",
-       "\n",
-       "       [[-35522.41],\n",
-       "        [-35618.35],\n",
-       "        [-35781.13],\n",
-       "        ...,\n",
-       "        [-35297.22],\n",
-       "        [-35059.32],\n",
-       "        [-35028.91]],\n",
-       "\n",
-       "       [[-35192.5 ],\n",
-       "        [-35463.76],\n",
-       "        [-35733.85],\n",
-       "        ...,\n",
-       "        [-36265.45],\n",
-       "        [-36272.82],\n",
-       "        [-36109.07]]])"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "groupedX"
+    "#groupedX[0]=np.concatenate(groupedX[0],1212)\n",
+    "#print(groupedX[0])\n",
+    "#sdf=pd.DataFrame(groupedX)\n",
+    "#sdf"
    ]
   },
   {
@@ -208,6 +152,87 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0          1\n",
+       "1          1\n",
+       "2          1\n",
+       "3          1\n",
+       "4          1\n",
+       "5          1\n",
+       "6          1\n",
+       "7          1\n",
+       "8          1\n",
+       "9          1\n",
+       "10         1\n",
+       "11         1\n",
+       "12         1\n",
+       "13         1\n",
+       "14         1\n",
+       "15         1\n",
+       "16         1\n",
+       "17         1\n",
+       "18         1\n",
+       "19         1\n",
+       "20         1\n",
+       "21         1\n",
+       "22         1\n",
+       "23         1\n",
+       "24         1\n",
+       "25         1\n",
+       "26         1\n",
+       "27         1\n",
+       "28         1\n",
+       "29         1\n",
+       "          ..\n",
+       "657402    37\n",
+       "657403    37\n",
+       "657404    37\n",
+       "657405    37\n",
+       "657406    37\n",
+       "657407    37\n",
+       "657408    37\n",
+       "657409    37\n",
+       "657410    37\n",
+       "657411    37\n",
+       "657412    37\n",
+       "657413    37\n",
+       "657414    37\n",
+       "657415    37\n",
+       "657416    37\n",
+       "657417    37\n",
+       "657418    37\n",
+       "657419    37\n",
+       "657420    37\n",
+       "657421    37\n",
+       "657422    37\n",
+       "657423    37\n",
+       "657424    37\n",
+       "657425    37\n",
+       "657426    37\n",
+       "657427    37\n",
+       "657428    37\n",
+       "657429    37\n",
+       "657430    37\n",
+       "657431    37\n",
+       "Name: Y, Length: 657432, dtype: int64"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Y"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -216,17 +241,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(2170,)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#X=X.reshape(-1,window)\n",
     "\n",
@@ -291,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -299,26 +316,14 @@
     "from sklearn.tree import DecisionTreeClassifier\n",
     "clf = DecisionTreeClassifier().fit(X_train, y_train)\n",
     "clf.score(X_test,y_test)\n",
-    "y_pre=clf.predict(X_test)"
+    "#y_pre=clf.predict(X_test)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'confusion_matrix' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-11-2b96cbac70c4>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[0mactual\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0my_test\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[0mpredicted\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0my_pre\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 3\u001b[1;33m \u001b[0mresults\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mconfusion_matrix\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mactual\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mpredicted\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      4\u001b[0m \u001b[0mprint\u001b[0m \u001b[1;33m(\u001b[0m\u001b[1;34m'Confusion Matrix :'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mresults\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'confusion_matrix' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "actual=y_test\n",
     "predicted=y_pre\n",
@@ -341,7 +346,7 @@
     "clf=RandomForestClassifier(n_estimators=100)\n",
     "clf.fit(X_train,y_train)\n",
     "clf.score(X_test,y_test)\n",
-    "y_pred=clf.predict(X_test)"
+    "#y_pred=clf.predict(X_test)"
    ]
   },
   {
