--- a/Loading Artifact files .ipynb
+++ b/Loading Artifact files .ipynb
@@ -1,6 +1,11 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": 20,
    "metadata": {},
@@ -64,14 +69,14 @@
     "arr=[]\n",
     "#loop\n",
     "while(True):\n",
-    "    #find first non 0 value\n",
+    "    #find first index with non 0 value\n",
     "    start=df.value.ne(0).idxmax()\n",
-    "    #end condition\n",
+    "    #end condition when all are zero\n",
     "    if(start==0):\n",
     "        break\n",
     "    # create a temp variable to store df excluding starting zeros\n",
     "    temp=df.iloc[start:]\n",
-    "    #from temp finding first zero\n",
+    "    #from temp finding first zero index\n",
     "    end=temp[temp.value==0].first_valid_index()-1\n",
     "    #a contains the latest chunk of labled data\n",
     "    a=df.iloc[start:end]\n",
@@ -1095,11 +1100,16 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Insights1. Data Should be labeled as      \n",
+    "a. Start just before an artifact, continue to press until the artifact is\n",
+    "complete     \n",
+    "b. Don’t start to label the next until the graph seems stable    \n",
+    "2. Just the amplitude can be used as a factor to classify artifact vs non\n",
+    "artifact\n"
+   ]
   },
   {
    "cell_type": "code",
@@ -1530,7 +1540,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
