--- a/deleting_unlabled_data.ipynb
+++ b/deleting_unlabled_data.ipynb
@@ -13,9 +13,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Pandas (pd) - for data manipulation\n",
+    "#Numpy (np)- for computation\n",
+    "\n",
     "import pandas as pd\n",
-    "import numpy as np\n",
-    "from sklearn.model_selection import train_test_split"
+    "import numpy as np"
    ]
   },
   {
@@ -27,20 +29,22 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Turiya\\Anaconda3\\lib\\site-packages\\IPython\\core\\interactiveshell.py:3049: DtypeWarning: Columns (0) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "C:\\Users\\Babbar\\Anaconda3\\lib\\site-packages\\IPython\\core\\interactiveshell.py:3049: DtypeWarning: Columns (0) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  interactivity=interactivity, compiler=compiler, result=result)\n"
      ]
     }
    ],
    "source": [
+    "#pd.read_csv reads csv files and return a data Frame, names=['X','Y'] sets the colomn names\n",
     "s1=pd.read_csv('Meditation experiment with tagging-1/NFB_17-4-2019_20-48._FP2csv.csv',names=['X','Y'])\n",
     "s2=pd.read_csv('Meditation experiment with tagging-1/NFB_17-4-2019_22-35_F4.csv',names=['X','Y'])\n",
     "s3=pd.read_csv('Meditation experiment with tagging-1/NFB_18-4-2019_0-13_O2.csv',names=['X','Y'])\n",
     "s4=pd.read_csv('Meditation experiment with tagging-1/NFB_18-4-2019_21-17._P4. csv.csv',names=['X','Y'])\n",
-    "s1=s3[12:]\n",
-    "s2=s2[3:]\n",
-    "s3=s3[12:]\n",
-    "s4=s4[3:]"
+    "#slising 1st sec\n",
+    "s1=s3[250:]\n",
+    "s2=s2[250:]\n",
+    "s3=s3[250:]\n",
+    "s4=s4[250:]"
    ]
   },
   {
@@ -53,88 +57,109 @@
      "output_type": "stream",
      "text": [
       "                X  Y\n",
-      "0       -35768.88  0\n",
-      "1       -35776.61  0\n",
-      "2       -35743.90  0\n",
-      "3       -35672.68  0\n",
-      "4       -35584.84  0\n",
-      "5       -35521.47  0\n",
-      "6       -35530.38  0\n",
-      "7       -35639.73  0\n",
-      "8       -35833.74  0\n",
-      "9       -36052.32  0\n",
-      "10      -36216.17  0\n",
-      "11      -36269.10  0\n",
-      "12      -36211.43  0\n",
-      "13      -36094.01  0\n",
-      "14      -35985.30  0\n",
-      "15      -35940.94  0\n",
-      "16      -35975.62  0\n",
-      "17      -36058.86  0\n",
-      "18      -36121.15  0\n",
-      "19      -36087.05  0\n",
-      "20      -35920.49  0\n",
-      "21      -35655.69  0\n",
-      "22      -35390.91  0\n",
-      "23      -35243.60  0\n",
-      "24      -35287.48  0\n",
-      "25      -35520.36  0\n",
-      "26      -35865.79  0\n",
-      "27      -36201.35  0\n",
-      "28      -36406.73  0\n",
-      "29      -36402.24  0\n",
+      "0       -36383.99  0\n",
+      "1       -36562.80  0\n",
+      "2       -36537.41  0\n",
+      "3       -36303.37  0\n",
+      "4       -35953.32  0\n",
+      "5       -35633.27  0\n",
+      "6       -35465.53  0\n",
+      "7       -35499.72  0\n",
+      "8       -35701.37  0\n",
+      "9       -35966.78  0\n",
+      "10      -36161.99  0\n",
+      "11      -36182.92  0\n",
+      "12      -36014.89  0\n",
+      "13      -35737.47  0\n",
+      "14      -35492.81  0\n",
+      "15      -35396.40  0\n",
+      "16      -35484.36  0\n",
+      "17      -35699.95  0\n",
+      "18      -35933.96  0\n",
+      "19      -36080.81  0\n",
+      "20      -36082.58  0\n",
+      "21      -35944.02  0\n",
+      "22      -35738.80  0\n",
+      "23      -35580.90  0\n",
+      "24      -35565.32  0\n",
+      "25      -35715.29  0\n",
+      "26      -35966.84  0\n",
+      "27      -36208.14  0\n",
+      "28      -36344.20  0\n",
+      "29      -36334.35  0\n",
       "...           ... ..\n",
-      "1831056 -24458.07  0\n",
-      "1831057 -24347.21  0\n",
-      "1831058 -24234.71  0\n",
-      "1831059 -24129.62  0\n",
-      "1831060 -24030.32  0\n",
-      "1831061 -23938.61  0\n",
-      "1831062 -23868.55  0\n",
-      "1831063 -23838.38  0\n",
-      "1831064 -23854.50  0\n",
-      "1831065 -23904.08  0\n",
-      "1831066 -23969.71  0\n",
-      "1831067 -24041.91  0\n",
-      "1831068 -24119.90  0\n",
-      "1831069 -24198.66  0\n",
-      "1831070 -24267.81  0\n",
-      "1831071 -24318.50  0\n",
-      "1831072 -24350.69  0\n",
-      "1831073 -24363.03  0\n",
-      "1831074 -24347.07  0\n",
-      "1831075 -24286.16  0\n",
-      "1831076 -24176.68  0\n",
-      "1831077 -24036.65  0\n",
-      "1831078 -23898.02  0\n",
-      "1831079 -23785.02  0\n",
-      "1831080 -23703.50  0\n",
-      "1831081 -23645.44  0\n",
-      "1831082 -23603.68  0\n",
-      "1831083 -23567.85  0\n",
-      "1831084 -23524.69  0\n",
-      "1831085 -23461.63  0\n",
+      "1830086 -24458.07  0\n",
+      "1830087 -24347.21  0\n",
+      "1830088 -24234.71  0\n",
+      "1830089 -24129.62  0\n",
+      "1830090 -24030.32  0\n",
+      "1830091 -23938.61  0\n",
+      "1830092 -23868.55  0\n",
+      "1830093 -23838.38  0\n",
+      "1830094 -23854.50  0\n",
+      "1830095 -23904.08  0\n",
+      "1830096 -23969.71  0\n",
+      "1830097 -24041.91  0\n",
+      "1830098 -24119.90  0\n",
+      "1830099 -24198.66  0\n",
+      "1830100 -24267.81  0\n",
+      "1830101 -24318.50  0\n",
+      "1830102 -24350.69  0\n",
+      "1830103 -24363.03  0\n",
+      "1830104 -24347.07  0\n",
+      "1830105 -24286.16  0\n",
+      "1830106 -24176.68  0\n",
+      "1830107 -24036.65  0\n",
+      "1830108 -23898.02  0\n",
+      "1830109 -23785.02  0\n",
+      "1830110 -23703.50  0\n",
+      "1830111 -23645.44  0\n",
+      "1830112 -23603.68  0\n",
+      "1830113 -23567.85  0\n",
+      "1830114 -23524.69  0\n",
+      "1830115 -23461.63  0\n",
       "\n",
-      "[1831086 rows x 2 columns]\n"
+      "[1830116 rows x 2 columns]\n"
      ]
     }
    ],
    "source": [
+    "#converting all variables to a single one (a.append(b) concatinates b to a)\n",
     "s=s1.append(s2.append(s3.append(s4)))\n",
     "#print(s)\n",
     "\n",
     "s.X=s.X.astype(float)\n",
     "s=s.reset_index(drop=True)\n",
     "print(s)\n",
+    "#shape gives shape of the array or dataframe [0] means number of rows\n",
     "data_points=s.shape[0]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Babbar\\Anaconda3\\lib\\site-packages\\ipykernel_launcher.py:8: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "\n",
+      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n",
+      "  \n",
+      "C:\\Users\\Babbar\\Anaconda3\\lib\\site-packages\\ipykernel_launcher.py:10: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "\n",
+      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n",
+      "  # Remove the CWD from sys.path while we load stuff.\n"
+     ]
+    }
+   ],
    "source": [
+    "#Labeling mind wonder correctly (0:05-1:05) before every label 39 starts as 1 and 40 as 2\n",
+    "#datapoints is total rows\n",
     "for i in range(data_points):\n",
     "    if(s.Y[i]==39 or s.Y[i]==40):\n",
     "            if s.Y[i-1]==s.Y[i]:\n",
@@ -147,11 +172,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "temp=s3\n",
+    "temp=s\n",
     "#rows=temp.shape[0]\n",
     "temp=temp[temp['Y']!=0]\n",
     "temp=temp[temp['Y']!=39]\n",
@@ -164,8 +189,37 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#to_csv converts the df to csv and saves it to a acv file\n",
     "temp.to_csv('trimmedData.csv',sep=',')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(657432, 2)"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Total Number of rows in trimmed data.csv is 657432\n",
+    "temp.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
